[package]
authors = ["Sebastian Messmer"]
edition = "2018"
name = "crypto-wallet-gen"
version = "2.1.0"
readme = "README.md"
documentation = "https://github.com/smessmer/crypto-wallet-gen"
homepage = "https://github.com/smessmer/crypto-wallet-gen"
repository = "https://github.com/smessmer/crypto-wallet-gen"
license = "GPL-3.0-or-later"
keywords = ["cryptocurrency", "wallet", "bitcoin", "monero", "ethereum"]
categories = ["command-line-utilities", "cryptography:cryptocurrencies"]
description = "This is a utility to generate seed phrases and to generate crypto currency wallets from a seed phrase. This way, you only need to remember one seed phrase and can generate wallets from it for multiple currencies."

[lib]
name = "crypto_wallet_gen"
path = "src/lib.rs"

[[bin]]
name = "crypto-wallet-gen"
path = "src/main.rs"

[dependencies]
anyhow = "^1.0.36"
bitcoin = "^0.25.2"
clap = "^2.33.3"
failure = "^0.1.8"
hex = "^0.4.2"
rand = {version = "^0.8.0", features = ["getrandom"]}
rand_chacha = "^0.3.0"
rand_core_5 = {version = "^0.5.1", package = "rand_core"}
rand_hc = "^0.3.0"
rand_jitter = "^0.3.0"
rdrand = "^0.7.0"
scrypt = "^0.5.0"
secp256k1 = "^0.19.0"
secp256k1_17 = {version = "^0.17.2", package = "secp256k1"}
thiserror = "^1.0.22"
tiny-bip39 = "^0.8.0"
trompt = "^0.0.4"
unicode-normalization = "^0.1.16"
wagyu-ethereum = "^0.6.3"
wagyu-model = "^0.6.3"
wagyu-monero = "^0.6.3"
zeroize = "^1.2.0"

[profile.release]
lto = "fat"
