[package]
authors = ["Sebastian Messmer"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]
description = "This is a utility to generate seed phrases and to generate crypto currency wallets from a seed phrase. This way, you only need to remember one seed phrase and can generate wallets from it for multiple currencies."
documentation = "https://github.com/smessmer/crypto-wallet-gen"
edition = "2021"
rust-version = "1.58"
homepage = "https://github.com/smessmer/crypto-wallet-gen"
keywords = ["cryptocurrency", "wallet", "bitcoin", "monero", "ethereum"]
license = "GPL-3.0-or-later"
name = "crypto-wallet-gen"
readme = "README.md"
repository = "https://github.com/smessmer/crypto-wallet-gen"
version = "2.3.0"

[lib]
name = "crypto_wallet_gen"
path = "src/lib.rs"

[[bin]]
name = "crypto-wallet-gen"
path = "src/main.rs"

[dependencies]
anyhow = "^1.0.52"
async-trait = "^0.1.52"
bitcoin = "^0.27.1"
clap = "^2.34.0"
failure = "^0.1.8"
futures = "^0.3.19"
hex = "^0.4.3"
jsonrpc = "^0.12.0"
rand = {version = "^0.8.4", features = ["getrandom"]}
rand_chacha = "^0.3.1"
rand_core_5 = {version = "^0.5.1", package = "rand_core"}
rand_hc = "^0.3.1"
rand_jitter = "^0.3.0"
rdrand = "^0.8.1"
scrypt = "^0.8.1"
secp256k1 = "^0.20.3"
secp256k1_17 = {version = "^0.17.2", package = "secp256k1"}
thiserror = "^1.0.30"
tiny-bip39 = "^0.8.2"
tokio = {version = "^1.15.0", features = ["rt-multi-thread", "macros"]}
trompt = "^0.0.4"
unicode-normalization = "^0.1.19"
wagyu-ethereum = "^0.6.3"
wagyu-model = "^0.6.3"
wagyu-monero = "^0.6.3"
zeroize = "^1.4.3"

[profile.release]
lto = "fat"
